// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion opened renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-collapse > .rovna-ui-collapse-item > .rovna-ui-collapse-header[aria-expanded='true'] {
  background-color: #F4F4F5FF;
}

.c0.rovna-ui-collapse > .rovna-ui-collapse-item > .rovna-ui-collapse-header:hover {
  background-color: #E8E9EBFF;
}

.c3 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 1.5;
}

.c4 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.42857;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

<div
  className="rovna-ui-collapse rovna-ui-collapse-icon-position-start c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <div
    className="rovna-ui-collapse-item rovna-ui-collapse-item-active"
    description="Description 1"
  >
    <div
      aria-disabled={false}
      aria-expanded={true}
      className="rovna-ui-collapse-header"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="rovna-ui-collapse-expand-icon"
      >
        <span
          className="c1 rovna-ui-icon-root anticon c2 rovna-ui-collapse-arrow"
          data-testid="rovna-ui-chevron-down-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <span
        className="rovna-ui-collapse-header-text"
      >
        <div
          className="c3"
        >
          Title 1
        </div>
        <div
          className="c4"
        >
          Description 1
        </div>
      </span>
    </div>
    <div
      className="rovna-ui-collapse-content rovna-ui-collapse-content-active"
    >
      <div
        className="rovna-ui-collapse-content-box"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quam!
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-collapse > .rovna-ui-collapse-item > .rovna-ui-collapse-header[aria-expanded='true'] {
  background-color: #F4F4F5FF;
}

.c0.rovna-ui-collapse > .rovna-ui-collapse-item > .rovna-ui-collapse-header:hover {
  background-color: #E8E9EBFF;
}

.c3 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 1.5;
}

.c4 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.42857;
}

.c2 {
  -webkit-transform: rotate(-90deg);
  -ms-transform: rotate(-90deg);
  transform: rotate(-90deg);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

<div
  className="rovna-ui-collapse rovna-ui-collapse-icon-position-start c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <div
    className="rovna-ui-collapse-item"
    description="Description 1"
  >
    <div
      aria-disabled={false}
      aria-expanded={false}
      className="rovna-ui-collapse-header"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="rovna-ui-collapse-expand-icon"
      >
        <span
          className="c1 rovna-ui-icon-root anticon c2 rovna-ui-collapse-arrow"
          data-testid="rovna-ui-chevron-down-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <span
        className="rovna-ui-collapse-header-text"
      >
        <div
          className="c3"
        >
          Title 1
        </div>
        <div
          className="c4"
        >
          Description 1
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`Accordion with extra renders correctly 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-size: 20px;
  color: inherit;
  line-height: 0;
  text-align: center;
  text-transform: none;
  vertical-align: -0.125em;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0.rovna-ui-collapse > .rovna-ui-collapse-item > .rovna-ui-collapse-header[aria-expanded='true'] {
  background-color: #F4F4F5FF;
}

.c0.rovna-ui-collapse > .rovna-ui-collapse-item > .rovna-ui-collapse-header:hover {
  background-color: #E8E9EBFF;
}

.c3 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 600;
  line-height: 1.5;
}

.c4 {
  font-family: Museo Sans Cyrl,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.42857;
}

.c2 {
  -webkit-transform: rotate(0);
  -ms-transform: rotate(0);
  transform: rotate(0);
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
}

<div
  className="rovna-ui-collapse rovna-ui-collapse-icon-position-start c0 css-dev-only-do-not-override-u64svk"
  style={{}}
>
  <div
    className="rovna-ui-collapse-item rovna-ui-collapse-item-active"
    description="Description 1"
  >
    <div
      aria-disabled={false}
      aria-expanded={true}
      className="rovna-ui-collapse-header"
      onClick={[Function]}
      onKeyDown={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="rovna-ui-collapse-expand-icon"
      >
        <span
          className="c1 rovna-ui-icon-root anticon c2 rovna-ui-collapse-arrow"
          data-testid="rovna-ui-chevron-down-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M6.29289 9.79289C6.68342 9.40237 7.31658 9.40237 7.70711 9.79289L12 14.0858L16.2929 9.79289C16.6834 9.40237 17.3166 9.40237 17.7071 9.79289C18.0976 10.1834 18.0976 10.8166 17.7071 11.2071L12.7071 16.2071C12.3166 16.5976 11.6834 16.5976 11.2929 16.2071L6.29289 11.2071C5.90237 10.8166 5.90237 10.1834 6.29289 9.79289Z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </div>
      <span
        className="rovna-ui-collapse-header-text"
      >
        <div
          className="c3"
        >
          Title 1
        </div>
        <div
          className="c4"
        >
          Description 1
        </div>
      </span>
      <div
        className="rovna-ui-collapse-extra"
      >
        <span>
          Extra child
        </span>
      </div>
    </div>
    <div
      className="rovna-ui-collapse-content rovna-ui-collapse-content-active"
    >
      <div
        className="rovna-ui-collapse-content-box"
      >
        Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, quam!
      </div>
    </div>
  </div>
</div>
`;
